fixed header spacing and changed background image

--- a/src/components/CSS/Header.css
+++ b/src/components/CSS/Header.css
@@ -1,13 +1,36 @@
 
 .titleFont {
     font-size: 8em;
+    padding-top: 10%;
+    width: auto;
 }
 
 .titleFont2 {
-    font-size: 3em;
+    font-size: 2.5em;
+    width: auto;
+}
+
+.titleFont3 {
+    font-size: 1em;
+    width: auto;
 }
 
 .header {
     height: 95vh;
+    max-height: 95vh;
+    padding: 0;
+    margin: 0;
     max-width: 100vw;
+}
+
+.h-20 {
+    height: 20%;
+}
+
+.h-40 {
+    height: 40%;
+}
+
+.h-45 {
+    height: 45%;
 }
